<resources>
    <string name="app_name">My Login</string>

    <string name="username_or_email_or_mobile">Username / Email / Mobile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="optional_email">Email (optional)</string>
    <string name="optional_mobile">Mobile (optional)</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>

    <string name="remember_me">Remember me</string>
    <string name="not_having_account">Not having an account?</string>
    <string name="already_having_account">Already having an account?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Must contain digits, lower and upper alpha characters, and length must be at least 6</string>
    <string name="invalid_repeat_password">Dosen\'t match the password</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_mobile">Not a valid mobile</string>

    <string name="register_exception_invalid_parameters">"Register failed! Invalid parameters"</string>
    <string name="register_exception_user_exists">"Register failed! User exists"</string>
    <string name="register_exception_email_exists">"Register failed! Email exists"</string>
    <string name="register_exception_mobile_exists">"Register failed! Mobile exists"</string>
    <string name="register_exception_unknown">"Register failed!"</string>
    <string name="login_exception_invalid_parameters">"Login failed! Invalid parameters"</string>
    <string name="login_exception_invalid_username">"Login failed! Invalid username"</string>
    <string name="login_exception_invalid_password">"Login failed! Invalid password"</string>
    <string name="login_exception_unknown">"Login failed!"</string>
    <string name="logout_exception_token_is_invalid_or_expired">"Logout failed! Token is invalid or expired"</string>
    <string name="logout_exception_unknown">"Logout failed!"</string>

    <string name="find_password_title_step_one">Step 1: Input Username</string>
    <string name="find_password_title_step_two">Step 2: Input Email or Mobile</string>
    <string name="find_password_title_step_three">Step 3: Request/Send Verification Code</string>
    <string name="find_password_next">Next</string>
    <string name="find_password_cannot_find_password">Cannot find password</string>
    <string name="find_password_input_email">Input email</string>
    <string name="find_password_input_mobile">Input mobile</string>
    <string name="find_password_request">Request Verification Code</string>
    <string name="find_password_send">Send Verification Code</string>

    <string name="find_password_exception_invalid_parameters">"Find password failed! Invalid parameters"</string>
    <string name="find_password_exception_invalid_cannot_find_password">"Find password failed! Cannot find password"</string>
    <string name="find_password_exception_unknown">"Find password failed!"</string>
    <string name="find_password_exception_invalid_username">"Find password failed! Invalid username"</string>
    <string name="find_password_exception_invalid_user_id">"Find password failed! Invalid user id"</string>
    <string name="find_password_exception_no_match_email">"Find password failed! Not match email"</string>
    <string name="find_password_exception_no_match_mobile">"Find password failed! Not match mobile"</string>
    <string name="find_password_exception_no_match_email_or_mobile">"Find password failed! Not match email or mobile"</string>
</resources>
