<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_sign_up_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="55dp"
        android:layout_weight="1"

        android:background="@null"
        android:drawableStart="@drawable/ic_user"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="14dp"

        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_title"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_username"
        app:layout_constraintStart_toStartOf="parent" />
    <!--输入框左侧图标：drawableLeft、drawablePadding-->
    <!--分割线：background="@null"-->

    <!--///[EditText清除输入框]-->
    <ImageView
        android:id="@+id/iv_clear_username"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_username" />

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:background="@null"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="14dp"
        android:textSize="14sp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />
    <!--输入框左侧图标：drawableLeft、drawablePadding-->
    <!--分割线：background="@null"-->

    <!--///[EditText清除输入框]-->
    <ImageView
        android:id="@+id/iv_clear_password"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toStartOf="@+id/iv_password_visibility"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <!--///[EditText显示/隐藏Password]-->
    <ImageView
        android:id="@+id/iv_password_visibility"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_visibility_off"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"

        android:background="@null"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="14dp"
        android:textSize="14sp"

        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_repeat_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />
    <!--输入框左侧图标：drawableLeft、drawablePadding-->
    <!--分割线：background="@null"-->

    <!--///[EditText清除输入框]-->
    <ImageView
        android:id="@+id/iv_clear_repeat_password"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:layout_margin="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_repeat_password"
        app:layout_constraintEnd_toStartOf="@+id/iv_repeat_password_visibility"
        app:layout_constraintTop_toTopOf="@+id/et_repeat_password" />

    <!--///[EditText显示/隐藏Password]-->
    <ImageView
        android:id="@+id/iv_repeat_password_visibility"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_visibility_off"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/et_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_repeat_password" />

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"

        android:background="@null"
        android:drawableStart="@drawable/ic_mail"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="14dp"

        android:hint="@string/optional_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_email"
        app:layout_constraintStart_toStartOf="parent" />
    <!--输入框左侧图标：drawableLeft、drawablePadding-->
    <!--分割线：background="@null"-->

    <!--///[EditText清除输入框]-->
    <ImageView
        android:id="@+id/iv_clear_email"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_email" />

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"

        android:background="@null"
        android:drawableStart="@drawable/ic_phone"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="14dp"

        android:imeActionLabel="@string/sign_up"
        android:imeOptions="actionDone"

        android:hint="@string/optional_mobile"
        android:inputType="textPhonetic"
        android:selectAllOnFocus="true"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_mobile"
        app:layout_constraintStart_toStartOf="parent" />
    <!--输入框左侧图标：drawableLeft、drawablePadding-->
    <!--分割线：background="@null"-->

    <!--///[EditText清除输入框]-->
    <ImageView
        android:id="@+id/iv_clear_mobile"
        android:layout_width="24dp"
        android:layout_height="55dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_clear"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_mobile" />

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/design_default_color_primary_dark"
        android:enabled="false"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

    <TextView
        android:id="@+id/already_having_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/not_having_account"
        android:textColor="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimaryDark"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_having_account" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>